--- a/Github/Dataprocessing/Homework/week 2/rawdatabackup.html
+++ b/Github/Dataprocessing/Homework/week 2/rawdatabackup.html
@@ -1,510 +1,173 @@
+<!DOCTYPE html>
+
+// Name: Ellemijke Donner
+// Student number: 10734198
+
 <html>
   <body>
     <canvas id="myCanvas" width="1000" height="500"></canvas>
-    <textarea id="rawdata" style="display: none">
-      260,20170101,    5
-      260,20170102,   30
-      260,20170103,   50
-      260,20170104,   58
-      260,20170105,    0
-      260,20170106,  -30
-      260,20170107,   -2
-      260,20170108,   43
-      260,20170109,   48
-      260,20170110,   53
-      260,20170111,   72
-      260,20170112,   52
-      260,20170113,   31
-      260,20170114,   18
-      260,20170115,    7
-      260,20170116,  -16
-      260,20170117,  -34
-      260,20170118,  -38
-      260,20170119,  -20
-      260,20170120,   -3
-      260,20170121,   -2
-      260,20170122,  -17
-      260,20170123,   16
-      260,20170124,    8
-      260,20170125,  -11
-      260,20170126,  -28
-      260,20170127,    8
-      260,20170128,   54
-      260,20170129,   47
-      260,20170130,   49
-      260,20170131,   37
-      260,20170201,   34
-      260,20170202,   86
-      260,20170203,   86
-      260,20170204,   57
-      260,20170205,   44
-      260,20170206,   43
-      260,20170207,   24
-      260,20170208,    0
-      260,20170209,  -16
-      260,20170210,  -23
-      260,20170211,   -4
-      260,20170212,    7
-      260,20170213,   22
-      260,20170214,   38
-      260,20170215,   74
-      260,20170216,   68
-      260,20170217,   70
-      260,20170218,   56
-      260,20170219,   62
-      260,20170220,   91
-      260,20170221,   96
-      260,20170222,   95
-      260,20170223,   80
-      260,20170224,   45
-      260,20170225,   58
-      260,20170226,   87
-      260,20170227,   87
-      260,20170228,   47
-      260,20170301,   63
-      260,20170302,   66
-      260,20170303,   59
-      260,20170304,   92
-      260,20170305,   69
-      260,20170306,   60
-      260,20170307,   67
-      260,20170308,   59
-      260,20170309,   77
-      260,20170310,   65
-      260,20170311,   73
-      260,20170312,   79
-      260,20170313,   65
-      260,20170314,   88
-      260,20170315,   90
-      260,20170316,   94
-      260,20170317,   83
-      260,20170318,   97
-      260,20170319,  113
-      260,20170320,  103
-      260,20170321,   75
-      260,20170322,   63
-      260,20170323,   82
-      260,20170324,   84
-      260,20170325,   85
-      260,20170326,   80
-      260,20170327,   92
-      260,20170328,  113
-      260,20170329,  126
-      260,20170330,  157
-      260,20170331,  145
-      260,20170401,  108
-      260,20170402,  103
-      260,20170403,   81
-      260,20170404,   98
-      260,20170405,   92
-      260,20170406,   81
-      260,20170407,  105
-      260,20170408,   96
-      260,20170409,  117
-      260,20170410,   98
-      260,20170411,   96
-      260,20170412,   98
-      260,20170413,   93
-      260,20170414,   99
-      260,20170415,   96
-      260,20170416,   79
-      260,20170417,   65
-      260,20170418,   61
-      260,20170419,   39
-      260,20170420,   69
-      260,20170421,  111
-      260,20170422,   78
-      260,20170423,   66
-      260,20170424,   93
-      260,20170425,   59
-      260,20170426,   50
-      260,20170427,   61
-      260,20170428,   76
-      260,20170429,   76
-      260,20170430,  123
-      260,20170501,  117
-      260,20170502,  100
-      260,20170503,  107
-      260,20170504,  104
-      260,20170505,   89
-      260,20170506,  128
-      260,20170507,  117
-      260,20170508,   97
-      260,20170509,   80
-      260,20170510,   90
-      260,20170511,  154
-      260,20170512,  155
-      260,20170513,  140
-      260,20170514,  134
-      260,20170515,  149
-      260,20170516,  204
-      260,20170517,  223
-      260,20170518,  165
-      260,20170519,  136
-      260,20170520,  125
-      260,20170521,  144
-      260,20170522,  176
-      260,20170523,  161
-      260,20170524,  159
-      260,20170525,  174
-      260,20170526,  203
-      260,20170527,  229
-      260,20170528,  205
-      260,20170529,  219
-      260,20170530,  183
-      260,20170531,  174
-      260,20170601,  166
-      260,20170602,  198
-      260,20170603,  184
-      260,20170604,  154
-      260,20170605,  171
-      260,20170606,  141
-      260,20170607,  140
-      260,20170608,  168
-      260,20170609,  165
-      260,20170610,  178
-      260,20170611,  199
-      260,20170612,  161
-      260,20170613,  163
-      260,20170614,  174
-      260,20170615,  200
-      260,20170616,  162
-      260,20170617,  186
-      260,20170618,  208
-      260,20170619,  236
-      260,20170620,  216
-      260,20170621,  214
-      260,20170622,  229
-      260,20170623,  196
-      260,20170624,  171
-      260,20170625,  175
-      260,20170626,  168
-      260,20170627,  173
-      260,20170628,  180
-      260,20170629,  175
-      260,20170630,  162
-      260,20170701,  161
-      260,20170702,  156
-      260,20170703,  166
-      260,20170704,  186
-      260,20170705,  190
-      260,20170706,  199
-      260,20170707,  206
-      260,20170708,  186
-      260,20170709,  172
-      260,20170710,  196
-      260,20170711,  177
-      260,20170712,  149
-      260,20170713,  146
-      260,20170714,  142
-      260,20170715,  172
-      260,20170716,  186
-      260,20170717,  186
-      260,20170718,  199
-      260,20170719,  235
-      260,20170720,  191
-      260,20170721,  182
-      260,20170722,  194
-      260,20170723,  160
-      260,20170724,  161
-      260,20170725,  167
-      260,20170726,  190
-      260,20170727,  185
-      260,20170728,  172
-      260,20170729,  182
-      260,20170730,  188
-      260,20170731,  181
-      260,20170801,  178
-      260,20170802,  176
-      260,20170803,  190
-      260,20170804,  183
-      260,20170805,  159
-      260,20170806,  158
-      260,20170807,  168
-      260,20170808,  162
-      260,20170809,  167
-      260,20170810,  157
-      260,20170811,  167
-      260,20170812,  168
-      260,20170813,  162
-      260,20170814,  179
-      260,20170815,  179
-      260,20170816,  176
-      260,20170817,  173
-      260,20170818,  169
-      260,20170819,  154
-      260,20170820,  158
-      260,20170821,  159
-      260,20170822,  182
-      260,20170823,  196
-      260,20170824,  179
-      260,20170825,  169
-      260,20170826,  182
-      260,20170827,  178
-      260,20170828,  187
-      260,20170829,  210
-      260,20170830,  178
-      260,20170831,  144
-      260,20170901,  147
-      260,20170902,  133
-      260,20170903,  130
-      260,20170904,  158
-      260,20170905,  186
-      260,20170906,  159
-      260,20170907,  156
-      260,20170908,  151
-      260,20170909,  132
-      260,20170910,  139
-      260,20170911,  141
-      260,20170912,  146
-      260,20170913,  141
-      260,20170914,  117
-      260,20170915,  125
-      260,20170916,  106
-      260,20170917,  108
-      260,20170918,  120
-      260,20170919,  120
-      260,20170920,  135
-      260,20170921,  134
-      260,20170922,  119
-      260,20170923,  109
-      260,20170924,  121
-      260,20170925,  142
-      260,20170926,  132
-      260,20170927,  136
-      260,20170928,  158
-      260,20170929,  171
-      260,20170930,  131
-      260,20171001,  141
-      260,20171002,  156
-      260,20171003,  136
-      260,20171004,  130
-      260,20171005,  129
-      260,20171006,  116
-      260,20171007,  122
-      260,20171008,  121
-      260,20171009,  121
-      260,20171010,  143
-      260,20171011,  148
-      260,20171012,  134
-      260,20171013,  153
-      260,20171014,  148
-      260,20171015,  158
-      260,20171016,  186
-      260,20171017,  129
-      260,20171018,  137
-      260,20171019,  157
-      260,20171020,  137
-      260,20171021,  132
-      260,20171022,  108
-      260,20171023,  126
-      260,20171024,  153
-      260,20171025,  142
-      260,20171026,  140
-      260,20171027,  118
-      260,20171028,  124
-      260,20171029,  107
-      260,20171030,   83
-      260,20171031,  101
-      260,20171101,  112
-      260,20171102,   98
-      260,20171103,   88
-      260,20171104,  106
-      260,20171105,   78
-      260,20171106,   48
-      260,20171107,   33
-      260,20171108,   59
-      260,20171109,   87
-      260,20171110,   92
-      260,20171111,   66
-      260,20171112,   52
-      260,20171113,   62
-      260,20171114,   77
-      260,20171115,   94
-      260,20171116,   93
-      260,20171117,   56
-      260,20171118,   69
-      260,20171119,   67
-      260,20171120,   78
-      260,20171121,  115
-      260,20171122,  114
-      260,20171123,  111
-      260,20171124,   69
-      260,20171125,   37
-      260,20171126,   53
-      260,20171127,   67
-      260,20171128,   54
-      260,20171129,   29
-      260,20171130,   15
-      260,20171201,    0
-      260,20171202,   -4
-      260,20171203,   37
-      260,20171204,   70
-      260,20171205,   76
-      260,20171206,   80
-      260,20171207,   59
-      260,20171208,   26
-      260,20171209,   21
-      260,20171210,   11
-      260,20171211,   -1
-      260,20171212,   18
-      260,20171213,   40
-      260,20171214,   33
-      260,20171215,   26
-      260,20171216,   27
-      260,20171217,   25
-      260,20171218,   59
-      260,20171219,   52
-      260,20171220,   75
-      260,20171221,   84
-      260,20171222,   86
-      260,20171223,   87
-      260,20171224,   82
-      260,20171225,   74
-      260,20171226,   58
-      260,20171227,   51
-      260,20171228,   39
-      260,20171229,   28
-      260,20171230,   88
-      260,20171231,  106
-    </textarea>
     <script>
-      var dataString = document.getElementById("rawdata").value;
-      var dataArray = dataString.split("\n");
+      // get data from knmidata text file, sent out request
+      var knmi = "knmidata.txt";
+      var dataFile = new XMLHttpRequest();
 
-      // make lists so data can be added
-      var dates = [];
-      var temperature = [];
-
-      // iterate over every string in the array
-      for (var i = 0; i < dataArray.length - 1; i++)
+      // check for status file
+      dataFile.onreadystatechange = function()
       {
-        // split if comma
-        dataArray[i] = dataArray[i].split(",");
-
-        var year = dataArray[i][1].substring(0, 4);
-        var month = dataArray[i][1].substring(4, 6);
-        var day = dataArray[i][1].substring(6, 8);
-
-        var date = new Date(year, month, day);
-        dates.push(date);
-
-        var temp = dataArray[i][2];
-        temperature.push(temp);
+        if (this.readyState === 4 && this.status === 200)
+        {
+          // call function on gotten data
+          graph(this.responseText)
+        }
       }
+      dataFile.open("GET", knmi, true);
+      dataFile.send();
 
-      // makes the canvas
-      var canvas = document.getElementById("myCanvas");
-      var ctx = canvas.getContext("2d");
-      // set domain ctx,range ctx, domain graphic
-      var ctxDomain = [100, 900];
-      var ctxRange = [50, 450];
-      var ctxLength = [800];
-      var temperatureMin = Math.min.apply(Math, temperature);
-      var temperatureMax = Math.max.apply(Math, temperature);
-      var temperatureDomain = [temperatureMin, temperatureMax];
-
-      // colors rectangle in
-      ctx.fillStyle = 'rgb(255,105,180)';
-      // draw the rectangle at position 10,10 width 55, height 50
-      ctx.fillRect(0, 0, 1000, 500);
-      // set title
-      ctx.font = "Bold 21px Calibri";
-      ctx.fillStyle = "rgb(253,245,230)";
-      ctx.textAlign = "center";
-      ctx.fillText("Average temperature in De Bilt, Netherlands, 2017", 500, 40);
-
-      // set x and y axis
-      ctx.beginPath();
-      ctx.moveTo(ctxDomain[0], ctxRange[0]);
-      ctx.moveTo(ctxDomain[0], ctxRange[0]);
-      ctx.lineTo(ctxDomain[0], ctxRange[1]);
-      ctx.lineTo(ctxDomain[1], ctxRange[1]);
-      ctx.stroke();
-
-      // set months as texts
-      const months = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug",
-      "Sep", "Oct", "Nov", "Dec"]
-      var yMonth = 475;
-      var paddingMonth = ctxLength / months.length;
-
-      for (var m = 0; m < months.length; m++)
+      function graph(rawData)
       {
-        var month = months[m];
-        var xMonth = ctxDomain[0] + 35 + (paddingMonth * m);
-        ctx.fillStyle = "pink";
+        // split the data when entering a new line
+        var dataArray = rawData.split("\n");
+
+        // make lists so data can be added
+        var dates = [];
+        var temperature = [];
+
+        // iterate over every string in the array
+        for (var i = 0; i < dataArray.length - 1; i++)
+        {
+          // split if comma
+          dataArray[i] = dataArray[i].split(",");
+
+          // set variables for i
+          var year = dataArray[i][1].substring(0, 4);
+          var month = dataArray[i][1].substring(4, 6);
+          var day = dataArray[i][1].substring(6, 8);
+
+          // add variables to list, set date to javaScript date
+          var date = new Date(year, month, day);
+          dates.push(date);
+
+          var temp = dataArray[i][2];
+          temperature.push(temp);
+        }
+
+        // make the canvas
+        var canvas = document.getElementById("myCanvas");
+        var ctx = canvas.getContext("2d");
+
+        // set domain, range, length, temperature variables
+        var ctxDomain = [100, 900];
+        var ctxRange = [50, 450];
+        var ctxLength = [800];
+        var temperatureMin = Math.min.apply(Math, temperature);
+        var temperatureMax = Math.max.apply(Math, temperature);
+        var temperatureDomain = [temperatureMin, temperatureMax];
+
+        // color rectangle in, set at position
+        ctx.fillStyle = 'rgb(255,105,180)';
+        ctx.fillRect(0, 0, 1000, 500);
+
+        // set title
+        ctx.font = "Bold 21px Calibri";
+        ctx.fillStyle = "rgb(253,245,230)";
         ctx.textAlign = "center";
-        ctx.fillText(month, xMonth, yMonth);
-      }
+        ctx.fillText("Average temperature in De Bilt, Netherlands, 2017", 500, 40);
 
-      // set temperature on y axis
-      var tempMax = Math.round(temperatureMax / 10);
-      var tempa = Math.round(temperatureMin / 10);
-      var tempRange = [];
-      var paddingTemp = 14.2;
-      var xTempera = ctxDomain[0] - 15;
-
-      do
-      {
-        tempa++;
-        tempRange.push(tempa);
-      }
-      while (tempa < tempMax);
-
-      for (var t = 0; t < tempRange.length; t++)
-      {
-        var tempera = tempRange[t];
-        console.log(tempera);
-        var yTempera = ctxRange[1] - (paddingTemp * t);
-        ctx.font = "18px Calibri";
-        ctx.fillStyle = "pink";
-        ctx.textAlign = "center";
-        ctx.fillText(tempera, xTempera, yTempera);
-      }
-
-      ctx.font = "16px Calibri";
-      ctx.fillStyle = "pink";
-      ctx.textAlign = "center";
-      ctx.fillText("celsius degrees", xTempera, 43);
-
-
-      // set points on ctx
-      var point = createTransform(temperatureDomain, [450, 50]);
-      ctx.beginPath();
-      var spaceBetweenPoints = ctxLength / dates.length;
-      var k = 100;
-      ctx.moveTo(k, point(temperature[0]));
-
-      for (var j = 0; j < 365; j++)
-      {
-        k += spaceBetweenPoints;
-        ctx.lineTo(k, point(temperature[j]));
+        // set x and y axis
+        ctx.beginPath();
+        ctx.moveTo(ctxDomain[0], ctxRange[0]);
+        ctx.moveTo(ctxDomain[0], ctxRange[0]);
+        ctx.lineTo(ctxDomain[0], ctxRange[1]);
+        ctx.lineTo(ctxDomain[1], ctxRange[1]);
         ctx.stroke();
-      }
 
-      function createTransform(domain, range)
-      {
-      	// domain is a two-element array of the data bounds [domain_min, domain_max]
-      	// range is a two-element array of the screen bounds [range_min, range_max]
-      	// this gives you two equations to solve:
-      	// range_min = alpha * domain_min + beta
-      	// range_max = alpha * domain_max + beta
-          var domain_min = domain[0]
-          var domain_max = domain[1]
-          var range_min = range[0]
-          var range_max = range[1]
+        // set months as texts
+        const months = ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug",
+        "Sep", "Oct", "Nov", "Dec"]
+        var yMonth = 475;
+        var paddingMonth = ctxLength / months.length;
 
-          // formulas to calculate the alpha and the beta
-         	var alpha = (range_max - range_min) / (domain_max - domain_min)
-          var beta = range_max - alpha * domain_max
+        // iterate over months and place in graph
+        for (var m = 0; m < months.length; m++)
+        {
+          var month = months[m];
+          var xMonth = ctxDomain[0] + 35 + (paddingMonth * m);
+          ctx.fillStyle = "pink";
+          ctx.textAlign = "center";
+          ctx.fillText(month, xMonth, yMonth);
+        }
 
-          // returns the function for the linear transformation (y= a * x + b)
-          return function(x)
-          {
-            return alpha * x + beta;
+        // set temperature on y axis
+        var tempMax = Math.round(temperatureMax / 10);
+        var tempa = Math.round(temperatureMin / 10);
+        var tempRange = [];
+        var paddingTemp = 14.2;
+        var xTempera = ctxDomain[0] - 15;
+
+        // set all temperatures
+        do
+        {
+          tempa++;
+          tempRange.push(tempa);
+        }
+        while (tempa < tempMax);
+
+        // iterate over temperatures and add in graph
+        for (var t = 0; t < tempRange.length; t++)
+        {
+          var tempera = tempRange[t];
+          var yTempera = ctxRange[1] - (paddingTemp * t);
+          ctx.font = "18px Calibri";
+          ctx.fillStyle = "pink";
+          ctx.textAlign = "center";
+          ctx.fillText(tempera, xTempera, yTempera);
+        }
+
+        // show info about measurements
+        ctx.font = "16px Calibri";
+        ctx.fillStyle = "pink";
+        ctx.textAlign = "center";
+        ctx.fillText("celsius degrees", xTempera, 43);
+
+        // set starting point on graph
+        var point = createTransform(temperatureDomain, [450, 50]);
+        ctx.beginPath();
+        var spaceBetweenPoints = ctxLength / dates.length;
+        var k = 100;
+        ctx.moveTo(k, point(temperature[0]));
+
+        // iterate over points and connect
+        for (var j = 0; j < 365; j++)
+        {
+          k += spaceBetweenPoints;
+          ctx.lineTo(k, point(temperature[j]));
+          ctx.stroke();
+        }
+
+        // given function used to createTransform
+        function createTransform(domain, range)
+        {
+        	// domain is a two-element array of the data bounds [domain_min, domain_max]
+        	// range is a two-element array of the screen bounds [range_min, range_max]
+        	// this gives you two equations to solve:
+        	// range_min = alpha * domain_min + beta
+        	// range_max = alpha * domain_max + beta
+            var domain_min = domain[0]
+            var domain_max = domain[1]
+            var range_min = range[0]
+            var range_max = range[1]
+
+            // formulas to calculate the alpha and the beta
+           	var alpha = (range_max - range_min) / (domain_max - domain_min)
+            var beta = range_max - alpha * domain_max
+
+            // returns the function for the linear transformation (y= a * x + b)
+            return function(x)
+            {
+              return alpha * x + beta;
+            }
           }
-      }
-
+        }
     </script>
 </body>
 </html>
