--- a/Github/Dataprocessing/Homework/week 2/rawdatabackup.html
+++ b/Github/Dataprocessing/Homework/week 2/rawdatabackup.html
@@ -144,6 +144,12 @@
           ctx.stroke();
         }
 
+        // ad my details
+        ctx.font = "Bold 11px Calibri";
+        ctx.fillStyle = "rgb(255,239,213)";
+        ctx.textAlign = "center";
+        ctx.fillText("By E. Donner, Assignment JavaScript, source: KNMI.", 770, 492);
+
         // given function used to createTransform
         function createTransform(domain, range)
         {
