--- a/Github/Dataprocessing/Homework/week 2/rawdatabackup.html
+++ b/Github/Dataprocessing/Homework/week 2/rawdatabackup.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-
-// Name: Ellemijke Donner
-// Student number: 10734198
+#Name: Ellemijke Donner
+#Student number: 10734198
 
 <html>
   <body>
