added index, and homework wk3

--- a/Github/index.html
+++ b/Github/index.html
@@ -6,11 +6,11 @@
     <title> Donner</title>
   </head>
 
-  <body>
-    <h1>Dataprocessing</h1>
-    <h2>Ellemijke Donner</h2>
+  <body style="background-color: papayawhip">
+    <h1 style="font: 24px calibri bold">Dataprocessing</h1>
+    <h2 style="font: 16px calibri">Door: Ellemijke Donner, 10734198</h2>
     <div>
-      <a href="http://Elleyey.github.io/WeatherOnline.html">Week 2: weather.html</a>
+      ~ <a href="http://Elleyey.github.io/WeatherOnline.html" style="font: 14px calibri"> week 2: weather.html</a>
     </div>
   </body>
 </html>
